🚀 Mainnet Update & Security Fixes - v2.1.0
✨ Major Updates:
- Updated to mainnet deployment (Program ID: HNPuLPxycypT4YtD5vMZPdcrr53MLKAajYrQwNTv4ujH)
- Fixed VIBES token decimals (9 → 6 for mainnet)
- Complete wallet distribution verification and mapping

🔒 Security Enhancements:
- Added secure-logger.js to prevent API key exposure
- Redacted all sensitive information from browser console
- Updated RPC URL logging to hide API keys
- Comprehensive security audit and documentation

🐛 Bug Fixes:
- Fixed staking decimal conversion (Custom:6014 error)
- Fixed USDC purchase wallet addresses (Custom:3012 error)
- Fixed buyer_state PDA seed for mainnet (buyer_v3 → buyer_state)
- Corrected business wallet addresses for USDC transactions

📊 UI/UX Improvements:
- Dynamic countdown timer synced with contract price tiers
- Real-time 'days left' counter for presale
- Hardcoded vesting start date (Oct 12, 2026)
- Removed last claim field from vesting info
- Enhanced staking management board with correct decimal display

📚 Documentation:
- Added SECURITY_AUDIT_LOG.md
- Added SECURITY_BEST_PRACTICES.md
- Added WALLET_MAPPING_FINAL.md
- Complete mainnet deployment documentation
- Wallet verification and analysis scripts

🛠️ Developer Tools:
- Added analyze_wallet_distributions.js
- Added verify_wallets_triple_check.js
- Updated env.example with safe example values
- Validation and testing scripts

All code includes English comments as per project standards.

--- a/env.example
+++ b/env.example
@@ -1,20 +1,22 @@
 # VIBES DeFi Basic DApp Environment Configuration
 # Copy this file to .env and fill in your values
+# ⚠️ IMPORTANT: This file contains EXAMPLE values only - replace with your actual values
 
 # Network Configuration
-RPC_URL=https://devnet.helius-rpc.com/?api-key=10bdc822-0b46-4952-98fc-095c326565d7
-FALLBACK_RPC=https://api.devnet.solana.com
+# Example RPC URLs - replace with your own API keys
+RPC_URL=https://mainnet.helius-rpc.com/?api-key=YOUR_HELIUS_API_KEY_HERE
+FALLBACK_RPC=https://api.mainnet-beta.solana.com
 MAINNET_RPC=https://api.mainnet-beta.solana.com
-NETWORK=devnet
+NETWORK=mainnet-beta
 
-# Smart Contract Program IDs (DEVNET - from anchor keys list)
-PRESALE_V3_PROGRAM_ID=HNPuLPxycypT4YtD5vMZPdcrr53MLKAajYrQwNTv4ujH
-STAKING_PROGRAM_ID=3ZaKegZktvjwt4SreDvitLECG47UnPdd4EFzNAnyHDaW
-VESTING_PROGRAM_ID=3EnPSZpZbKDwVetAiXo9bos4XMDvqg1yqJvew8zh4keP
+# Smart Contract Program IDs (EXAMPLE - Replace with your deployed program IDs)
+PRESALE_V3_PROGRAM_ID=YourPresaleProgramIdHere111111111111111111111
+STAKING_PROGRAM_ID=YourStakingProgramIdHere111111111111111111111
+VESTING_PROGRAM_ID=YourVestingProgramIdHere111111111111111111111
 
-# Token Configuration (Devnet)
-USDC_MINT=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
-VIBES_MINT=C4SeJZr8wJ6BrNUJP52vGZf6QMunWFRgx6kbkb56j3vW
+# Token Configuration (EXAMPLE - Replace with your token mints)
+USDC_MINT=EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
+VIBES_MINT=YourVibesTokenMintHere1111111111111111111111111
 
 # Presale Configuration
 PRESALE_START_TS=0
